--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue-audio": "0.0.12",
     "vue-audio-visual": "^2.2.2",
     "vuetify": "^2.4.0",
-    "vuetify-audio": "^0.3.3"
+    "vuetify-audio": "^0.3.3",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -26,7 +27,6 @@
     "cache-loader": "^4.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "express": "^4.17.1",
     "node-sass": "^4.12.0",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
