--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "express": "^4.17.1",
+    "vue": "^2.6.12",
     "vue-audio": "0.0.12",
     "vue-audio-visual": "^2.2.2",
     "vuetify": "^2.4.0",
-    "vuetify-audio": "^0.3.3",
-    "express": "^4.17.1"
+    "vuetify-audio": "^0.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
